<resources>
    <string name="app_name">Coffee Wizard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_faq">Go to FAQ Page</string>
    <string name="brew_button">Brew</string>
    <string name="website_button">Website</string>
    <string name="dial_in_button">Dial In</string>
    <string name="faq_button">FAQs</string>
    <string name="title_activity_dial_in">Dial In</string>
    <string name="coffee_weight">Coffee Weight (g)</string>
    <string name="coffee_weight_dialog">Coffee Weight (grams)</string>
    <string name="coffee_density">Coffee Density</string>
    <string name="water_volume">Volume (grams)</string>
    <string name="dial_in_title">Choose Your Coffee!</string>
    <string name="brew_start_button">BREW!</string>
    <string name="title_activity_brewing">brewingActivity</string>
    <string name="coffee_density_value">Current Coffee Density</string>
    <string name="size_default">15</string>
    <string-array name="brewers">
        <item>Select Coffee Machine</item>
        <item>V60</item>
        <item>Press Pot</item>
        <item>Chemex</item>
        <item>More Brewers Coming Soon!</item>
    </string-array>
    <string name="title_activity_brews">Brews</string>
    <string name="recent_brews">Recent Brews</string>
    <string name="favorite_brews">Favorite Brews</string>
    <string name="brewer">Brewer</string>
    <string name="density">Density</string>
    <string name="volume">Volume</string>
    <string name="about_us">About Us</string>
    <string name="weight">Weight</string>
    <string name="about_us_1">\nUncommon Coffee Roasters opened in the spring of 1994 with a goal of providing the best fresh
        roasted specialty coffee to our customers. We take pride in our product and expect all of our employees to do so as well.
        We stress education, consistency, and customer service as the three areas of focus for our baristas.\n</string>
    <string name="about_us_2"> There is something to be said about small. After all,
        the best things come in small packages. At Uncommon Coffee Roasters we believe in small.
        We purchase our coffees from small growers in small farms or cooperatives. When possible,
        we travel to these farms to personally meet the farmers, ensure they are paid fairly and to guarantee
        the quality our customers would expect. Our coffee is always roasted in small batches to guarantee optimal
        quality every time we roast. \n</string>
    <string name="about_us_3"> We source our green coffee globally, traveling to the origin whenever possible.
        Once our beans arrive to us, we store them in ideal conditions to guarantee the freshest coffee possible.
        When it comes to roasting we are proud to say that we only roast in small batches. Roasting in small batches
        allows us to ensure that we roast each and every batch to perfection every time we roast.\n</string>
    <string name="about_us_4"> We proudly provide coffee to small cafes and to large corporations.
        We consider our wholesale customers our partners. We assist our customers in growing their coffee sales.
        We can provide equipment, training and consultation. Our goal is to insure that our wholesale customers provide
        the best product possible and the quality that they could only expect from Uncommon Coffee Roasters.\n</string>
    <string name="title_activity_preparation">preparation</string>
    <string name="contact_us">Contact Us</string>
    <string name="find_us">Find us on your favorite social media!</string>
    <string name="call_us">If you have any questions, please call us at 1-269-455-5111</string>
    <string name="open">Open the Drawer</string>
    <string name="close">Close the Drawer</string>
    <string name="fh_pour">Pouring Water</string>
    <string name="ft_pour_top">The flow rate of the water used to brew coffee is one of many crucial
        variables in pour-over brewing that must be controlled in order to brew a consistent cup.
        For the recipes in the Coffee Wizard to be applicable, the user must pour the water
        as restricted and slowly as possible without letting the water stream drip. This will maximize consistency
        and let the grind size and coffee density determine our overall brew time. Start by pouring the water from
        the center out to the edge of the brewer in quick circles as to saturate all grounds evenly.
        Remember, we want a restricted flow, but quick circles.</string>
    <string name="ft_pour_mid">Coffee can be brewed in many different ways, but we chose to utilize
        a slow pouring method because it supplies the most consistent results. Pouring with high
        velocities will force the coffee to move inside the brewer, agitating the coffee grounds,
        causing some grounds to extract at different speeds than others. Secondly, the water will
        drip faster and less consistently when stirred around than it will with a flat and even
        coffee bed.</string>
    <string name="fsh_sol">\nPractical Solutions \n</string>
    <string name="ft_pour_sol">The best choices for pour-over brewing are gooseneck kettles which
        provide ample control over the water flow. The best results come from filling the kettle
        only half to three quarters full.  For additional consistency, you can insert a flow
        restrictor into the tip of the kettle. </string>
    <string name="fh_grind_q">Grind Quality</string>
    <string name="ft_grind_top">Apart from great coffee, the grind quality is possibly the most
        important component to delicious coffee. Unfortunately, this happens to be one of the least
        accessible factors in coffee brewing. Nice grinders are expensive...And even the best
        grinders needs help in achieving the optimal grind size. </string>
    <string name="ft_grind">Most of the brew recipes and brewers will use a similar grind
        size. Start by matching the grind size to the picture provided. If your coffee tastes
        sour or brews too quickly, adjust the grind FINER. If  the coffee tastes bitter or
        brews too slowly, grind the coffee COARSER. The grind size for the V60 and Press pot
        will be very similar for our recipes, but the chemex will use a slightly coarser grind.
        The grounds should feel like a medium fine table salt if run between your fingers. \n
    </string>
    <string name="ft_grind_bot">The grind size will affect how quickly water will flow through
        the coffee bed. As a rule of thumb, the finer you grind, the more flow restriction
        (the water will flow slower). However, inconsistent grinds can flow slowly because
        the fines and boulders are plugging up the holes that would be voids if the grounds
        were more even. </string>
    <string name="fsh_grinders">Grinders </string>
    <string name="ft_grinders">All grinders will perform differently, even the same models
        will vary slightly. Successful coffee brewing comes from maximizing the uniformity
        (evenness) of ground coffee particles because the particle size determines how quickly
        the coffee will be extracted.\n</string>
    <string name="ft_grind_burr">Burr Grinders - Burr grinders supply the best grind uniformity,
        however, flat burrs tend to do a better job than conical burrs. In addition to the burrs’
        teeth shape, the size of the burrs matter too. We tend to favor larger burrs because they
        chop the coffee a greater number of times before the grounds exit the grinder. This means
        that it is more likely that the grounds will end up being the correct size.\n</string>
    <string name="ft_grind_blade">Blade Grinders - Blade grinders work, but they aren’t
        ideal as you can’t control the particle size. Try experimenting with pulsing and
        shaking the grinder so that all parts of the beans are chopped. \n</string>
    <string name="fsh_fab">Fines and Boulders</string>
    <string name="ft_fab">Fines and boulders are what we call the extreme outliers for
        particles that are too big and small. These components are inevitable, but we can
        reduce them by changing burrs once worn down or dull.\n</string>
    <string name="fsh_tips">Tips</string>
    <string name="ft_tips">We can get rid of our fines and boulders by using a few simple tricks.
        Ideally, we want a grind size of 400 microns, but this is hardly measurable at home without
        buying a sieve or expensive gear.\n</string>
    <string name="ft_tip1">- Grind a little extra coffee and run the grounds through a fine kitchen
        sifter. This will catch the boulders we don’t want. Go ahead and discard them.\n</string>
    <string name="ft_tip2">- Dump grounds onto a paper towel or a damp coffee filter and rub the
        coffee into the paper. The fines should stick the paper towel or filter. Throw away the
        paper towel when finished.\n</string>
    <string name="ft_tip3">- Your grounds are ready to go and much more consistent
        than before! \n</string>
    <string name="fh_waterq">Water Quality</string>
    <string name="ft_waterq">Coffee is about 98-99% water, it only makes sense that we need
        tasty water to make tasty coffee. As a general rule, if the water tastes bad, so will
        the coffee, but there are components to water that you may not notice that are hurting
        your brew quality. Optimally, we don’t want our water to taste like anything, but that’s
        not to say we want our water distilled. We do NEED minerals in our water for us extract
        our coffee properly, but in order to protect our equipment and maximize taste we want
        to keep the minerals to a minimum. Water as soft as 80ppm can taste great, as well as
        coffees up to 140ppm. Ideally, we want our minerals to be magnesium and calcium as they
        are some of the biggest flavor extractors of coffee. We want to avoid, salts, chlorine,
        fluoride, etc. We recommend a Reverse Osmosis system with the option to blend in hard
        water. We understand that this is probably not accessible in the kitchen. If not, we
        recommend using a normal pitcher filter (like britta), and blending that with anywhere
        from 30-50% distilled water. Experiment to find where your water tastes best! \n</string>
    <string name="fh_coffeed">Coffee Density</string>
    <string name="ft_coffeed_1">In the ‘Dial-In’ option in the Coffee Wizard, we ask you to
        choose a low, medium, or high density options for the coffee. This refers to the bean
        density of the coffee. Depending on how the coffee was roasted in addition to its raw
        qualities, each coffee will have a unique amount of moisture and organic matter density.
        We gave you three options that should get you in the ballpark of your target brew time.
        The denser the coffee, the longer it takes for water to penetrate the grounds. This means
        that the highest density coffees will flow slower, and will take longer to extract.
        Likewise, the lowest density coffees will brew much quicker and more efficiently.\n</string>
    <string name="ft_coffeed_2">To find the density of your coffee, you can either take a bite
        out of a roasted bean, or you can try to crush it in your fingers. The lower the density,
        the easier it will be to break. If it feels like you are eating potato chips, it is most
        likely low density. If it feels like you’re eating a hard candy, it will most likely be
        high density. As a rule of thumb, a ‘light’ roast will mean the coffee is high density,
        and a ‘Dark’ roast is low density. If your coffee brews radically too fast or slow, try
        selecting a different density. </string>
    <string name="title_activity_new_faq">FAQ Page</string>
    <string name="action_settings">Settings</string>
</resources>