<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teamcoffee.coffeewizard.NewFAQActivity">
    <!--<item android:id="@+id/action_example" android:title="@string/action_example"-->
        <!--app:showAsAction="withText|ifRoom" />-->
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about_us" android:title="@string/about_us"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_contact_us" android:title="@string/contact_us"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
