<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.teamcoffee.coffeewizard.dial_in">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/coffee_weight"
        android:id="@+id/coffeeWeightText"
        android:layout_above="@+id/editText"
        android:layout_alignRight="@+id/waterVolumeText"
        android:layout_alignEnd="@+id/waterVolumeText"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/coffee_weight_dialog"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginBottom="102dp"
        android:layout_above="@+id/selectDensityText"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/densitySeekBar"
        android:max="10"
        android:progress="5"
        android:clickable="false"
        android:layout_marginBottom="114dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/selectDensityText"
        android:layout_alignStart="@+id/selectDensityText"
        android:layout_alignRight="@+id/selectDensityText"
        android:layout_alignEnd="@+id/selectDensityText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/coffee_density"
        android:id="@+id/selectDensityText"
        android:layout_above="@+id/densitySeekBar"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waterSeekBar"
        android:max="10"
        android:progress="5"
        android:layout_below="@+id/waterVolumeText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/selectDensityText"
        android:layout_alignEnd="@+id/selectDensityText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/water_volume"
        android:id="@+id/waterVolumeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dial_in_title"
        android:id="@+id/titleText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/waterVolumeNumber"
        android:layout_below="@+id/waterSeekBar"
        android:layout_centerHorizontal="true"
        android:hint="Current Water Volume" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brew_start_button"
        android:id="@+id/brewButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:focusable="false"
        android:onClick="brewButton"/>

</RelativeLayout>
