<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:focusableInTouchMode="false"
        android:id="@+id/brewsTitleRow">

        <TextView
            android:id="@+id/brewer"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/brewer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:layout_weight="25" />

        <TextView
            android:id="@+id/density"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/density"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="0dp"
            android:layout_weight="25" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/weight"
            android:layout_weight="25" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="25" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Brew!"
            android:id="@+id/brewButton"
            android:layout_marginLeft="10dp"
            android:layout_weight=".02" />

        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/toggleButton"
            android:minHeight="0dp"
            android:maxWidth="0dp"
            android:background="@drawable/check"
            android:layout_weight=".02"
            android:textOff=""
            android:textOn=""
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="10dp" />

    </TableRow>

</LinearLayout>