<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/brewer"
            android:id="@+id/textView3"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/density"
            android:id="@+id/textView4"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weight"
            android:id="@+id/textView5"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/volume"
            android:id="@+id/textView6"
            android:layout_weight=".25" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:id="@+id/brewsTitleRow"
        android:weightSum="1">

        <TextView
            android:id="@+id/brewer"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/brewer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:layout_weight=".25" />

        <TextView
            android:id="@+id/density"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/density"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="0dp"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/weight"
            android:layout_weight=".25" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight=".25" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_vertical|center">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Brew!"
            android:id="@+id/brewButton"
            android:layout_weight=".02" />

        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/toggleButton"
            android:minHeight="0dp"
            android:background="@drawable/check"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle" />
    </TableRow>

</LinearLayout>